<resources>
    <string name="app_name">BugTracker</string>
    <string name="text_welcome2">Please login or sign up to continue using our app.</string>
    <string name="roboto_medium">roboto_medium</string>
    <string name="custom_art">custom art</string>
    <string name="bug_tracker">Bug Tracker</string>
    <string name="to_do">To do</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="task">Task</string>
    <string name="create_todo">create Todo</string>
    <string name="create">Create</string>
    <string name="going_back">going back</string>
    <string name="add_task">Add Task</string>
    <string name="sample_text">Sample Text</string>
    <string name="hello">hello</string>
    <string name="todo">TODO</string>
    <string name="task_status">Task Status</string>
    <string name="your_task">Your Task</string>
    <string name="open">Opening menu</string>
    <string name="close">Closing menu</string>
    <string name="edit_task">Edit Task</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="transition_root" translatable="false">transition_root</string>
    <string name="transition_string">transition_text</string>
    <string name="brwa_kawa">Brwa Kawa</string>
    <string name="brwakawa_gmail_com">brwakawa@gmail.com</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="describe_your_issue_or_idea">Describe your issue or idea...</string>
    <string name="feedback_text">Do you have a suggestion or found some bug? Let us know in the field bellow.</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="task_manager">Task Manager</string>
    <string name="logo_picture">logo picture</string>
    <string name="name">Name</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Sign up</string>
    <string name="have_an_account">have an account?</string>
    <string name="signin">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_new_email">Enter your new email</string>
    <string name="new_email_address">New email address</string>
    <string name="account">Account</string>
    <string name="email_icon">email icon</string>
    <string name="change_email">Change Email</string>
    <string name="right_arrow_icon">right arrow icon</string>
    <string name="key_icon">key icon</string>
    <string name="change_password">Change Password</string>
    <string name="log_out_current_account">Log out current account</string>
    <string name="next">Next</string>
    <string name="re_enter_your_current_password_to_continue">Re-enter your current password to continue</string>
    <string-array name="dropdown_string_items">
            <item>TODO</item>
            <item>INPROGRESS</item>
            <item>COMPLETED</item>
        </string-array>
</resources>
