<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:id="@+id/detail_layout"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    android:transitionName="@string/transition_root"
    app:layout_constraintTop_toTopOf="parent">

    <View
        android:id="@+id/activity_detail_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
       />

    <ImageView
        android:id="@+id/closeImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/going_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cancel_icon" />

    <TextView
        android:id="@+id/EditTaskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:text="@string/edit_task"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yourTaskText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionGroup="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTaskText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/yourTaskInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/taskStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/task_status"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourTaskText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskStatusTextView">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="0"
            android:fitsSystemWindows="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskStatusTextView"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:text="@string/delete"
        android:textColor="#FFFFFF"
        app:backgroundTint="#EA0F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>


